[package]
name = "rskm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"              
thiserror = "2"
colored = "2"           # Красивый вывод
dialoguer = "0.11"      # Интерактивные промпты
tabled = "0.17"         # Табличный вывод